--- a/app/delivery.html
+++ b/app/delivery.html
@@ -87,12 +87,15 @@
 
     <main class="delivery_and_payment delivery">
         <section>
-            <div class="container delivery_and_payment_main">
+            <div class="container">
                 <div class="row">
                     <div class="col-12">
                         <h1 class="title-text-border">Оплата и доставка</h1>
                     </div>
-                    <!-- .cards-dark -->
+                </div>
+            </div> <!-- .cards-dark -->
+            <div class="container delivery_and_payment_main new">
+                <div class="row">
                     <div class="col-md-5 col-lg-6 details_left">
                         <div class="choose_block">
                             <div class="">
@@ -162,6 +165,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
             </div>
         </section>
         <section class="fd-sevensect">
