--- a/app/payment.html
+++ b/app/payment.html
@@ -87,11 +87,15 @@
 
     <main class="delivery_and_payment payment">
         <section>
-            <div class="container delivery_and_payment_main">
+            <div class="container">
                 <div class="row">
                     <div class="col-12">
                         <h1 class="title-text-border">Оплата и доставка</h1>
                     </div>
+                </div>
+            </div>
+            <div class="container delivery_and_payment_main new">
+                <div class="row">
                     <div class="col-md-5 col-lg-6 details_left">
                         <div class="choose_block">
                             <div class="choose_active">
@@ -131,6 +135,9 @@
                         </div>
                     </div>
                 </div>
+            </div>
+
+            </div>
             </div>
         </section>
 
