--- a/app/dealer.html
+++ b/app/dealer.html
@@ -318,7 +318,7 @@
             </div>
         </section>
 
-        <section class="fd download-catalog">
+        <section class="fdd download-catalog">
             <div class="container">
                 <div class="download-catalog__wrap bg-white-shadow">
                     <div class="row">
