--- a/app/delivery.html
+++ b/app/delivery.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <header class="header">
+    <!-- <header class="header">
         <div class="container">
             <div class="header__top">
                 <div class="header__logo">
@@ -83,9 +83,9 @@
                 </ul>
             </nav>
         </div>
-    </header>
+    </header> -->
 
-    <main class="delivery_and_payment delivery">
+    <!-- <main class="delivery_and_payment delivery">
         <section>
             <div class="container">
                 <div class="row">
@@ -93,7 +93,7 @@
                         <h1 class="title-text-border">Оплата и доставка</h1>
                     </div>
                 </div>
-            </div> <!-- .cards-dark -->
+            </div>
             <div class="container delivery_and_payment_main new">
                 <div class="row">
                     <div class="col-md-5 col-lg-6 details_left">
@@ -178,9 +178,9 @@
             </div>
         </section>
 
-    </main>
+    </main> -->
 
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container">
             <div class="row call-us">
                 <div class="col-12 col-md-3 col-lg-2 offset-lg-1 call-us__meneger">
@@ -264,7 +264,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
 
     <script src="js/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
