--- a/app/payment.html
+++ b/app/payment.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
-    <title>Главная</title>
+    <title>Оплата и доставка</title>
     <meta name='description' content="" />
     <meta name="keywords" content="" />
     <link rel="icon" type="image/x-icon" href="image/favicon.png" />
@@ -86,7 +86,7 @@
     </header>
 
     <main class="delivery_and_payment payment">
-        <section>
+        <section class="payment-tab">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -98,11 +98,11 @@
                 <div class="row">
                     <div class="col-md-5 col-lg-6 details_left">
                         <div class="choose_block">
-                            <div class="choose_active">
+                            <div class="choose_active payment-tab1">
                                 <img src="./image/icons/Orion_wallet2.svg" alt="">
                                 <span>Способы оплаты</span>
                             </div>
-                            <div class="">
+                            <div class="payment-tab2">
                                 <img src="./image/icons/delivery-truck-with-circular-clock2.svg" alt="">
                                 <span>Способы доставки</span>
                             </div>
@@ -140,7 +140,98 @@
             </div>
             </div>
         </section>
+        <section class="delivery-tab">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h1 class="title-text-border">Оплата и доставка</h1>
+                    </div>
+                </div>
+            </div> <!-- .cards-dark -->
+            <div class="container delivery_and_payment_main new">
+                <div class="row">
+                    <div class="col-md-5 col-lg-6 details_left">
+                        <div class="choose_block">
+                            <div class="payment-tab1">
+                                <img src="./image/icons/Orion_wallet.svg" alt="">
+                                <span>Способы оплаты</span>
+                            </div>
+                            <div class="choose_active payment-tab2">
+                                <img src="./image/icons/delivery-truck-with-circular-clock.svg" alt="">
+                                <span>Способы доставки</span>
+                            </div>
+                        </div>
+                        <div class="bid_img">
+                            <img src="./image/van.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xl-4  col-md-6 col-lg-5 details_right">
+                        <div>
+                            <h2>
+                                По Киеву и области
+                            </h2>
+                            <ol>
+                                <li>
+                                    <h3>Самовывоз </h3>
+                                    <p>
+                                        Вы можите сами приехать забрать продукцию или нанять стороний транспорт.
+                                    </p>
+                                </li>
+                                <li>
+                                    <h3>Логистика Comfortline </h3>
+                                    <p>
+                                        Мы сами можем доставить вам все к нужному месту
+                                    </p>
+                                </li>
+                                </li>
+                            </ol>
+                        </div>
+                        <div>
+                            <h2>
+                                По Украине
+                            </h2>
+                            <ol>
+                                <li>
+                                    <h3> SAT</h3>
 
+                                </li>
+                                <li>
+                                    <h3>Новая Почта </h3>
+
+                                </li>
+                                <li>
+                                    <h3>Ин Тайм </h3>
+
+                                </li>
+                                <li>
+                                    <h3> Диливери </h3>
+
+                                </li>
+
+                                <li>
+                                    <h3>Ночной экспресс </h3>
+                                    <p>
+                                        Усиливаем упаковку если дальняя дорога.
+                                    </p>
+                                </li>
+                                </li>
+                            </ol>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+            <section class="fd-sevensect">
+                <div class="container">
+                    <h3 class="title-white">Делаем отгрузки 24/7</h3>
+                    <p>
+                        Это очень удобно, особенно когда к монтажу роллет нужно приступать ночью, например после
+                        закрытия
+                        торгового центра.
+                    </p>
+                </div>
+            </section>
+        </section>
 
     </main>
 
